--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -6,11 +6,7 @@
 
 
 
-* {
-
-  font-family: 'Public Sans', sans-serif;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+* { font-family: 'Public Sans', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -20,15 +16,9 @@
 }
 
 body {
-  max-width: 1900px;
   margin: 0 auto;
 }
 
-body > * {
-  padding-left: 8vw;
-  padding-right: 8vw;
-  overflow-x: hidden;
-}
 
 
 
