--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,1 +1,25 @@
-/* .logo-container{} */
+.header{
+    display: flex;
+    justify-content: space-around;
+    width: 100vw;
+    height: 9.7em;
+    border-color: black;
+    align-items: flex-end;
+}
+
+.logo-container{
+    width: 9em;
+    height: 9em;   
+    border-radius: 50%;
+    background-color: white;
+   
+    
+    
+} 
+
+.img-logo{
+    width: 9em;
+    height: 9em; 
+    object-fit: cover;
+    border-radius: 50%;
+}
