--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -10,7 +10,7 @@
 }
 
 .logo-navlinks-container{
-    background-color: grey;
+   
     width: 30vw;
     height: 7.5em;
     display: flex;
@@ -39,4 +39,6 @@
 .footer-social-network-container{
     display: flex;
     width: 7.5vw;
+    margin-right: 12em;
+    justify-content: space-between;
 }
