--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,11 +7,14 @@
 }
 
 body {
-  margin: 0;
   font-family: 'Public Sans', sans-serif;;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #FAFAFA;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  position: relative;
 }
 
 code {
