--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -1,19 +1,37 @@
 .image-section-container{ 
-    border: 0,5px solid var(--primary-color);
-    height: 20%;
-    width:85vw;
+    width:60vw;
     display: flex;
-    flex-direction: wrap
-
-    
-
+    justify-content: space-around;
+    margin: 6em 30em;
 } 
 
+.aside-image-container{
+    width: 60%;
+}
 
 .image{
-    height: 600px;
+    width: 80%;
+    object-fit: cover;
+
 }
+
+
 
 .text-container{
 
+    border-top: 0.2px solid lightgray;
+    border-bottom: 0.2px solid lightgray;
+    width: 40%;
+} 
+
+.section-title{
+    font-size: 3em; 
+    font-family: var(--title-font);
 }
+
+.text-content{
+    font-size: 1.5em;
+    line-height: 1.5em;
+    color: var(--button-hover-color)
+}
+
