--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@700&display=swap');
 
 :root{
   --primary-color: #33323D;
+  --button-hover-color:#616067; 
   --accent-color: #5271ff;
   --bg-color: #FAFAFA;
+  --title-font:'Ibarra Real Nova', serif;
 }
 
 body {
@@ -16,6 +18,8 @@ body {
   padding: 0;
   min-height: 100vh;
   position: relative;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 code {
