Navlink, clase active y libreria haslink para enlace anchor a la misma pagina

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -16,5 +16,12 @@
 }
 
 .navlink:hover{
-    color: var(--accent-color);
+    color: #5FB4A2;
+}
+
+.active{
+
+  font-weight: bold;
+  color: #5FB4A2;
+
 }
