--- a/frontend/src/components/ColorButton/ColorButton.css
+++ b/frontend/src/components/ColorButton/ColorButton.css
@@ -1,15 +1,34 @@
 .color-button{
-    color: var(--button-hover-color);
+    color: var(--bg-color);
     background-color: #203a4c;
-    cursor: pointer;
+    width: 14em;
+    height: 4.1em;
+    font-size: 0.90em;
     font-weight: 600;
-    font-size: 1em;
-    width: 12em;
-    height: 3.1em;
     letter-spacing: 1px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border:none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.chevron-container{
+    margin-left:0;
+    height: 2em;
+    width: 3em;
+    margin:0;
+    
 }
 
 .color-button:hover {
     background-color: #5FB4A2;
     color: var(--bg-color);
+    cursor: pointer;
+}
+.chevron-container:hover{
+    background-color: #57A594;
+
 }
