--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -4,18 +4,17 @@
     width: 100vw;
     height: 9.7em;
     align-items: flex-end;
+    margin-top: 2em;
 }
 
 .header-logo-container{
-    width: 9em;
-    height: 9em;   
-    border-radius: 50%;
-    background-color: white;
+    height:8em; 
+    background-color: var(--bg-color);
 } 
 
 .header-img-logo{
-    width: 9em;
-    height: 9em; 
     object-fit: cover;
-    border-radius: 50%;
+    width:100%;
+    height:100%;
+   
 }
