--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,18 +1,22 @@
 .header{
     display: flex;
-    justify-content: space-around;
-    width: 100vw;
-    height: 9.7em;
+    justify-content: space-between;
+    height: 8em;
     align-items: flex-end;
-    margin-top: 2em;
+    width:72.5%;
+    margin-left: 10%;
+
 }
 
 .header-logo-container{
-    height:8em; 
+    margin-top:1em;
+    margin-left: 0;
+    height:7em; 
     background-color: var(--bg-color);
 } 
 
 .header-img-logo{
+    margin-left: 0;
     object-fit: cover;
     width:100%;
     height:100%;
