--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,10 +1,12 @@
 
 .navlinks-container{
-  height: 2em;
-  width:20vw;
   display: flex;
+  height: 2em;
+  width:140%;
   justify-content: space-between;
   align-items: flex-end;
+  font-weight: 600;
+  font-size: 1em;
   
 }
 
@@ -12,6 +14,7 @@
     color: var(--primary-color);
     font-weight: 600;
     text-decoration: none;
+
 
 }
 
@@ -23,5 +26,6 @@
 
   font-weight: bold;
   color: #5FB4A2;
+  justify-content: space-between;
 
 }
