--- a/frontend/src/components/SectionCTA/SectionCTA.css
+++ b/frontend/src/components/SectionCTA/SectionCTA.css
@@ -1,9 +1,9 @@
 .cta-section-container{
     display: flex;
     justify-content: space-around;
-    margin: 6em 30em;
-    border: 1px solid black;
     align-items: center;
+    width: 77%;
+    margin: 1em 12.5em;
 }
 
 
@@ -18,7 +18,7 @@
         
     border-top: 1px solid lightgray; /* Puedes ajustar el grosor y el color de la línea según tus necesidades */
     margin: 20px 0;
-    width: 20em;
+    width: 40%;
     height: 0.01px;
     
 }
