--- a/frontend/src/components/SectionCTA/SectionCTA.css
+++ b/frontend/src/components/SectionCTA/SectionCTA.css
@@ -1,24 +1,25 @@
 .cta-section-container{
+    margin-top: 6em;
+    margin-left: 11.7em;
+    margin-bottom: 3.7em;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 77%;
-    margin: 1em 12.5em;
 }
 
 
 .cta-section-text-container{
-    font-size: 3em; 
+    font-size: 2.5em; 
     font-family: var(--title-font);
-    width: 40%;
+    width: 35%;
 
 }
 
 .cta-rule{
-        
     border-top: 1px solid lightgray; /* Puedes ajustar el grosor y el color de la línea según tus necesidades */
     margin: 20px 0;
-    width: 40%;
+    width: 47%;
     height: 0.01px;
     
 }
