--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -2,15 +2,17 @@
     display: flex;
     justify-content: space-around;
     width: 70%;
-    margin: 8em 12.5em;
+    margin-top: 8em; 
+    margin-left: 12.5em;
 } 
 
 .aside-image-container{
-    width: 60%;
+    width: 52%;
+   
 }
 
 .image{
-    width: 80%;
+    width: 100%;
     object-fit: cover;
 
 }
@@ -25,13 +27,18 @@
 } 
 
 .section-title{
+    margin-top: 2em;
     font-size: 3em; 
     font-family: var(--title-font);
 }
 
 .text-content{
-    font-size: 1.5em;
-    line-height: 1.5em;
+    font-size: 1.3em;
+    line-height: 1.7em;
     color: var(--button-hover-color)
+}
+
+.button-container{
+    margin-top: 3rem
 }
 
