--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 :root{
   --primary-color: #33323D;
   --button-hover-color:#616067; 
-  --accent-color: #5271ff;
+  --accent-color: #5FB4A2;
   --bg-color: #FAFAFA;
   --title-font:'Ibarra Real Nova', serif;
 }
