--- a/frontend/src/components/ContactForm/ContactForm.css
+++ b/frontend/src/components/ContactForm/ContactForm.css
@@ -8,7 +8,7 @@
   }
   
   /* Estilos para el formulario */
-  form {
+.contact-form {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -17,7 +17,7 @@
   }
   
   /* Estilos para las etiquetas de los campos */
-  label {
+  .contact-form-label {
     display: block;
     margin-bottom: 10px;
   }
