--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -1,20 +1,18 @@
-/* .login-form-container{
+.login-form-container{
     display:flex;
     flex-direction: column;
     justify-content: center;
     border: black solid 0.1em;
-    height: 100%;
-    width: 90%;
-    margin-left:0;
-} */
+    
+}
 
 .login-form{
     border: none;
     background-color: #fff;
-    padding: 20px;
+    padding: 5%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 70%;
+
 }
 
 .login-form-title{
@@ -31,3 +29,4 @@
 .text-content{
     font-size: 1.3em;
 }
+
