--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -2,7 +2,7 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    border: black solid 0.1em;
+    /* border: black solid 0.1em; */
     
 }
 
