ultimos ajustes css project detail

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 }
 
 body{
-  font-family: 'Public Sans', sans-serif;;
+  font-family: 'Public Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-color);
@@ -30,4 +30,5 @@ code {
 
 h1, h2, h3, h4, h5, h6 {
   color: var(--primary-color);
+  font-family: var(--title-font);
 }
