--- a/frontend/src/components/ProjectInfo/ProjectInfo.css
+++ b/frontend/src/components/ProjectInfo/ProjectInfo.css
@@ -8,7 +8,7 @@
 .hero-image{
     width: 77%;
     height: 45em;
-    margin: 3.5em 12.5em;
+    margin: 3.5em 12.5em 0em;
 
     
 }
@@ -20,7 +20,27 @@
 }
 
 .bottom-container{
+    margin: 2em;
+    width: 77%;
+    margin: 0.2em 12.5em;
     display:flex;
     flex-direction: row;
+}
+
+.project-detail-title-container{
+    
+   
+   
+}
+
+.project-detail-text-container{
+    
+
+}
+
+
+.static-preview{
+    margin:1.5em;
+    width: 65%;
 
 }
