--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,7 +6,8 @@
   justify-content: space-between;
   align-items: flex-end;
   font-weight: 600;
-  font-size: 1em;
+  font-size: 0.75em;
+  line-height: 22px;
   
 }
 
