--- a/frontend/src/components/ProjectInfo/ProjectInfo.css
+++ b/frontend/src/components/ProjectInfo/ProjectInfo.css
@@ -6,9 +6,11 @@
 }
 
 .hero-image{
-    width: 77%;
+    width: 70%;
     height: 45em;
-    margin: 3.5em 12.5em 0em;
+    margin: 3.5em 0em 6em 12em;
+    
+   
 
     
 }
@@ -27,7 +29,7 @@
     flex-direction: row;
 }
 
-.project-detail-title-container{
+/* .project-detail-title-container{
     
    
    
@@ -36,7 +38,7 @@
 .project-detail-text-container{
     
 
-}
+} */
 
 
 .static-preview{
