--- a/frontend/src/components/SectionHero/SectionHero.css
+++ b/frontend/src/components/SectionHero/SectionHero.css
@@ -1,30 +1,39 @@
 .hero-section-container{
-    margin: 3.5em 12.5em;
+    margin: 2.3em 9.3em;
     position: relative;
-    background-image: url('https://res.cloudinary.com/dsesprxhl/image/upload/v1702062089/portfolio/pexels-picjumbocom-196655_jsplwv.jpg');
-    width: 77%;
-    height: 45em;
+    width: 69.56em;
+    height: 37.5em;
     display: flex;
-    background-size:cover;
     align-items: flex-end;
     justify-content: flex-start;
+    overflow: hidden;
     
 }
 
+.hero-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    
+
+}
+
 .hero-section-text-container{
+    position:absolute;
     background-color: #fafafa;
-    height: 26em;
-    width: 35em;
+    height: 22.5em;
+    width: 27.6em;
     font-family: var(--title-font);
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     padding-bottom: 0;
+    line-height: 3.12em;
     }
 
 .hero-section-title{
-    margin-top: 0;
-    font-size: 3.5em;
+    margin-top: 1em;
+    font-size: 50px;
     font-weight: 700;
-    
 }
