--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -1,13 +1,16 @@
 .image-section-container{ 
     display: flex;
     justify-content: space-around;
-    width: 70%;
+    width: 1015px;
+    height: 600px;
     margin-top: 8em; 
-    margin-left: 12.5em;
+    margin-left: 9.3em;
 } 
 
 .aside-image-container{
-    width: 52%;
+    width: 33.75rem;
+    height: 37.5rem;
+  
    
 }
 
@@ -21,21 +24,25 @@
 
 .text-container{
 
+    margin-left: 7em; 
     border-top: 0.2px solid lightgray;
     border-bottom: 0.2px solid lightgray;
-    width: 40%;
+    width: 22.5em;
+    
 } 
 
-.section-title{
-    margin-top: 2em;
-    font-size: 3em; 
+.section-image-section-title{
+    font-size: 2.5em; 
     font-family: var(--title-font);
+    line-height: 42px;
 }
 
 .text-content{
-    font-size: 1.3em;
-    line-height: 1.7em;
-    color: var(--button-hover-color)
+    font-size: 1em;
+    line-height: 1.8em;
+    color: var(--button-hover-color);
+    width: 99%;
+
 }
 
 .button-container{
