--- a/frontend/src/components/ProjectInfo/ProjectInfo.css
+++ b/frontend/src/components/ProjectInfo/ProjectInfo.css
@@ -1,19 +1,40 @@
 .project-info-full-container{
-    display: flex;
-    flex-direction: column;
-
-
-}
-
-.hero-image{
-    width: 70%;
-    height: 45em;
-    margin: 3.5em 0em 6em 12em;
-    
-   
-
+    font-family:'Public Sans', sans-serif ;
     
 }
+
+.project-info-hero-image{
+
+    margin-top: 6em;
+    margin-left:9.3em;
+    height: 30em;
+    width: 70em;
+}
+
+
+
+.bottom-container{
+    display:flex;
+    flex-direction: row;
+    width: 70em;
+    margin: 9.3em;
+}
+
+.project-detail-title-container{
+    line-height: 30px;
+    font-size: 0.9em;
+    color: var(--primary-color);  
+    border-top: solid 0.5px lightslategray;
+    border-bottom: solid 0.5px lightslategray;
+    height: max-content;
+    padding-bottom: 2em;
+}
+
+.project-detail-title-container h3{ 
+    font-weight: 900;
+    font-size: 2.5em;
+}
+
 .github-round{
     background-color: var(--accent-color);
     width: 2.3em;
@@ -21,24 +42,19 @@
     border-radius: 50%;
 }
 
-.bottom-container{
-    margin: 2em;
-    width: 77%;
-    margin: 0.2em 12.5em;
-    display:flex;
-    flex-direction: row;
-}
-
-/* .project-detail-title-container{
-    
-   
-   
-}
-
 .project-detail-text-container{
-    
+    margin-top:0;
+    padding: 0 4em;
+    line-height: 30px;
+    font-size: 0.95em;
+    color: var(--primary-color);
 
-} */
+} 
+.project-detail-text-container h3{
+    font-size: 2em;
+    font-weight: 400;
+   
+} 
 
 
 .static-preview{
