ajustes css y label/input contact form

--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -28,6 +28,7 @@
     border-top: 0.2px solid lightgray;
     border-bottom: 0.2px solid lightgray;
     width: 22.5em;
+    height:auto;
     
 } 
 
