--- a/frontend/src/components/ContactForm/ContactForm.css
+++ b/frontend/src/components/ContactForm/ContactForm.css
@@ -20,6 +20,8 @@
   .contact-form-label {
     display: block;
     margin-bottom: 10px;
+    font-size: 0.75em;
+    line-height: 10px;
   }
   
   /* Estilos para los campos de entrada y el área de texto */
