--- a/frontend/src/components/SectionHero/SectionHero.css
+++ b/frontend/src/components/SectionHero/SectionHero.css
@@ -1,5 +1,5 @@
 .hero-section-container{
-    margin: 2.3em 9.3em;
+    margin: 2.3em;
     position: relative;
     width: 69.56em;
     height: 37.5em;
