--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -4,7 +4,7 @@
     width: 1015px;
     height: 600px;
     margin-top: 8em; 
-    margin-left: 9.3em;
+    /*margin-left: 9.3em;*/
 } 
 
 .aside-image-container{
