--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,9 +15,10 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-color);
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   min-height: 100vh;
+  max-width: 1200px;;
   position: relative;
   overflow-y: scroll;
   overflow-x: hidden;
