--- a/frontend/src/components/SectionText/SectionText.css
+++ b/frontend/src/components/SectionText/SectionText.css
@@ -1,6 +1,6 @@
 .text-section-container{
     margin-top: 3.5em;
-    margin-left: 12.5em;
+    /*margin-left: 12.5em;*/
     width:77%;
     border-top: solid lightgrey 0.2px;
     display:flex;
