--- a/frontend/src/components/SectionText/SectionText.css
+++ b/frontend/src/components/SectionText/SectionText.css
@@ -22,7 +22,7 @@
 }
 
 .social-network-capsule{
-    padding-top: 0.3em;
+   /* padding-top: 0.3em;
     margin-top: 0.5em;
     height: 2.5em;
     display: flex;
@@ -31,5 +31,16 @@
     background-color: #203A4C;
     width: 18%;
     height: 2em;
+    border-radius:30px;*/
+
+    background-color: #203A4C;
+    display: flex;
+    width: 26%;
+    height: 2.3em;
+    align-items: center;
+    justify-content: space-around;
     border-radius:30px;
+    padding: 5px;
+    box-sizing: border-box;
 }
+
