--- a/frontend/src/pages/admin-pages/AdminPanel/AdminPanel.css
+++ b/frontend/src/pages/admin-pages/AdminPanel/AdminPanel.css
@@ -1,7 +1,49 @@
-.register-form-container{
-    border: black solid 1px;
-    margin: 1em 15em;
-    width: 50%;
-    padding: 2%;
-    
-}
+/* Estilos para el formulario de nuevos proyectos */
+
+
+.admin-nav{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    align-items: center;
+    margin: 10px auto;
+    width: 99%;
+    max-width: 1200px;
+    border: 1px solid var(--accent-color);
+    background-color: var(--bg-color);
+    color: white;
+
+  }
+
+   /* Estilos para el tablero de mensajes */
+   .message-board-container {
+    flex: 1;
+    max-width: 1200px;
+  }
+
+
+  .row-container{
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+
+
+.new-project-form {
+    flex: 1;
+    max-width: 45%;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+  }
+  
+ 
+  
+  /* Estilos para el formulario de registro de nuevos usuarios */
+  .register-form-container {
+    flex: 1;
+    max-width: 45%;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+  }
