--- a/frontend/src/components/MessageBoard/MessageBoard.css
+++ b/frontend/src/components/MessageBoard/MessageBoard.css
@@ -13,6 +13,9 @@
     color: var(--bg-color);
     padding: 8px;
     text-align: left;
+    border-top:solid 0.5px var(--bg-color);
+    border-radius: 10px 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
   
