--- a/frontend/src/pages/admin-pages/AdminPanel/AdminPanel.css
+++ b/frontend/src/pages/admin-pages/AdminPanel/AdminPanel.css
@@ -3,6 +3,7 @@
 
 .admin-nav{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding: 10px;
     align-items: center;
@@ -19,12 +20,24 @@
    .message-board-container {
     flex: 1;
     max-width: 1200px;
+    border:solid 0.5px var(--bg-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 2%;
+    margin: 20px auto;
+    background-color: #f0f0f0;
+  }
+
+  .message-board-table{
+    border:solid 0.5px var(--bg-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
 
-  .row-container{
-    display: flex;
-    flex-wrap: wrap;
+  .lower-container{
+    /*display: flex;
+    flex-wrap: wrap;*/
 
   }
 
@@ -34,7 +47,10 @@
     max-width: 45%;
     padding: 20px;
     background-color: #f0f0f0;
-    border-radius: 8px;
+    margin: 20px;
+    border:solid 0.5px var(--bg-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
  
@@ -46,4 +62,9 @@
     padding: 20px;
     background-color: #f0f0f0;
     border-radius: 8px;
+    margin: 20px;
+    border:solid 0.5px var(--bg-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: fit-content;
   }
