--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,10 +1,15 @@
 .header{
+    border: black solid 0.5px;
+    /*margin: 2.3em;*/
     display: flex;
     justify-content: space-between;
     height: 8em;
     align-items: flex-end;
-    width:72.5%;
+    width:69.5em;
+    padding:0;
     /*margin-left: 5%;*/
+    position: relative;
+    left: 2.3rem ;
 
 }
 
