--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -2,12 +2,13 @@
 .navlinks-container{
   display: flex;
   height: 2em;
-  width:140%;
+  width:16rem;
   justify-content: space-between;
   align-items: flex-end;
   font-weight: 600;
   font-size: 0.75em;
   line-height: 22px;
+  border: 0.5px solid blue;
   
 }
 
