--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -2,13 +2,15 @@
 .navlinks-container{
   display: flex;
   height: 2em;
-  width:16rem;
+  width:20rem;
   justify-content: space-between;
   align-items: flex-end;
   font-weight: 600;
   font-size: 0.75em;
   line-height: 22px;
   border: 0.5px solid blue;
+  letter-spacing: 0.2em;
+  color: var(--primary-color)
   
 }
 
