--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .header{
-    border: black solid 0.5px;
+    /*border: black solid 0.5px;*/
     display: flex;
     justify-content: space-between;
     height: 6em;
     align-items: flex-end;
     width:69em;
     padding:0;
-    margin: 0 auto;
+    margin: 2em auto;
     
 
 }
