--- a/frontend/src/components/SectionHero/SectionHero.css
+++ b/frontend/src/components/SectionHero/SectionHero.css
@@ -1,12 +1,12 @@
 .hero-section-container{
-    border: black solid 0.5px;
+    /*border: black solid 0.5px;*/
     width: 69em;
     height: 37.5em;
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
     overflow: hidden;
-    margin: 2em auto;
+    margin: 1.5em auto;
     
 }
 
@@ -15,8 +15,6 @@
     height: 100%;
     object-fit: cover;
     
-    
-
 }
 
 .hero-section-text-container{
