--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -1,8 +1,8 @@
 .image-section-container{ 
     display: flex;
     justify-content: space-around;
-    width: 1015px;
-    height: 600px;
+    width: 69em;
+    height: 37.5em;
     margin-top: 8em; 
     /*margin-left: 9.3em;*/
 } 
