front ajustes margenes de home unfinished

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    /*border: black solid 0.5px;*/
+    border: black solid 0.5px;
     display: flex;
     justify-content: space-between;
     height: 6em;
