--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,12 +1,19 @@
+/* .footer-wrapper{
+    max-width: 100%;
+    background-color: #203A4C;
+} */
+
 .footer-container {
 
-    border-top: solid 0.5px var(--primary-color);
+    border: solid 0.5px gray;
     display: flex;
     align-items: flex-end;
-    height: 8em;
     justify-content: space-between;
     width: 69em;
-    padding: 15px;
+    margin: 0 auto;
+    background-color: #fafafa;
+    padding: 2em;
+    box-sizing: border-box;
 
 
 }
@@ -29,8 +36,8 @@
 .footer-social-network-container {
     background-color: #203A4C;
     display: flex;
-    width: 10em;
-    height: 3.2em;
+    width: 9.5em;
+    height: 3em;
     align-items: center;
     justify-content: space-around;
     border-radius:30px;
