--- a/frontend/src/components/SectionImage/SectionImage.css
+++ b/frontend/src/components/SectionImage/SectionImage.css
@@ -1,10 +1,10 @@
 .image-section-container{ 
+    border: solid black 1px;;
     display: flex;
     justify-content: space-around;
     width: 69em;
-    height: 37.5em;
-    margin-top: 8em; 
-    /*margin-left: 9.3em;*/
+    margin: 8em auto; 
+    
 } 
 
 .image-section-container:nth-child(even){
@@ -12,10 +12,9 @@
 } /* para el efecto de texto y foto derecha7izquierda subsecuente*/
 
 .aside-image-container{
-    width: 33.75rem;
-    height: 37.5rem;
+    width: 35rem;
+    height: 100%;
   
-   
 }
 
 .image{
