--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-color);
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   min-height: 100vh;
   max-width: 1200px;;
