--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,25 +1,24 @@
 .header{
-    border: black solid 0.5px;
+    /*border: black solid 0.5px;*/
     display: flex;
     justify-content: space-between;
-    height: 6em;
+    height: 5.5em;
     align-items: flex-end;
     width:69em;
     padding:0;
-    margin: 2em auto;
+    /*margin: 0 auto;*/
     
 
 }
 
 .header-logo-container{
-    margin-top:0.75em;
+    
     margin-left: 0;
-    height:6em; 
+    height:5.5em; 
     background-color: var(--bg-color);
 } 
 
 .header-img-logo{
-    margin-left: 0;
     object-fit: cover;
     width:100%;
     height:100%;
