--- a/frontend/src/components/SectionHero/SectionHero.css
+++ b/frontend/src/components/SectionHero/SectionHero.css
@@ -1,5 +1,5 @@
 .hero-section-container{
-    border: black solid 0.5px;
+    /*border: black solid 0.5px;*/
     width: 69em;
     height: 37.5em;
     display: flex;
