--- a/frontend/src/components/ColorButton/ColorButton.css
+++ b/frontend/src/components/ColorButton/ColorButton.css
@@ -1,9 +1,9 @@
 .color-button{
     color: var(--bg-color);
     background-color: #203a4c;
-    width: 17.8em;
+    width: 15.7em;
     height: 4.1em;
-    font-size: 0.70em;
+    font-size: 0.80em;
     font-weight: 600;
     letter-spacing: 1px;
     display:flex;
@@ -11,16 +11,14 @@
     justify-content: space-around;
     align-items: center;
     border:none;
-    padding-left: 0;
+    padding: 0;
     margin-bottom: 0;
+    box-sizing: border-box;
 }
 
 .chevron-container{
-    margin-left:0;
-    height: 2em;
-    width: 3em;
+    padding:0;
     margin:0;
-    
 }
 
 .color-button:hover {
